Various cleanup in build code.